@@ -474,6 +474,9 @@ Library
 Extension Modules
 -----------------
 
+- Issue #7736: Release the GIL around calls to opendir() and closedir()
+  in the posix module.  Patch by Marcin Bachry.
+
 - Issue #4835: make PyLong_FromSocket_t() and PyLong_AsSocket_t() private
   to the socket module, and fix the width of socket descriptors to be
   correctly detected under 64-bit Windows.
